--- a/test/dockerfile
+++ b/test/dockerfile
@@ -9,4 +9,4 @@ RUN apt-get update \
     libcurl4-openssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
-COPY ../libraries /libraries
+COPY libraries /libraries
